--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <hr class="footer-divider" />
                 <p>Thank you for connecting.</p>
                 <p>Please text or email me your contact information.</p>
+                <p> ©2025 Matt Gollihur</p>
             </div>
 
         </div>
